# ffm

./: .gitignore  CMakeLists.txt  vcpkg.json
ffplay_refactor/: CMakeLists.txt  fifo_test.cpp  main.cpp
include/: drawer.h  logger.hpp  player.h
reference/: decode.mmd
simple_decoder/: CMakeLists.txt  simple_decoder.cpp
simple_sdl/: CMakeLists.txt  simple_sdl.cpp
src/: player.cpp  sdl_drawer.cpp
video_player/: CMakeLists.txt  video_player.cpp
yuv_sdl_player/: CMakeLists.txt  yuv_sdl_player.cpp
